crates/stc_ts_file_analyzer/tests/errors/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer3/1.ts
// Derived type indexer must be subtype of base type indexer

interface Base { foo: string; }
interface Derived extends Base { bar: string; }

class A {
    [x: string]: Derived;
}

export class B extends A {
    [x: string]: Base; // error
}

